fix: mention exchange manager overrides

--- a/docs/modules/trino/pages/usage-guide/configuration.adoc
+++ b/docs/modules/trino/pages/usage-guide/configuration.adoc
@@ -15,6 +15,7 @@ For a role or role group, at the same level of `config`, you can specify `config
 * `node.properties`
 * `password-authenticator.properties`
 * `security.properties`
+* `exchange-manager.properties`
 
 For a list of possible configuration properties consult the https://trino.io/docs/current/admin/properties.html[Trino Properties Reference].
 
