--- a/docs/modules/trino/pages/usage-guide/client-spooling-protocol.adoc
+++ b/docs/modules/trino/pages/usage-guide/client-spooling-protocol.adoc
@@ -26,7 +26,8 @@ spec:
         location: "s3://spooling-bucket/trino/" # <1>
         filesystem:
           s3: # <2>
-            reference: "minio"
+            connection:
+              reference: "minio"
 ----
 <1> Specifies the location where spooled data will be stored. This example uses an S3 bucket.
 <2> Configures the filesystem type for spooling. Only S3 is supported currently via the custom resource definition.
