docs: Re-order supported versions

--- a/docs/modules/trino/partials/supported-versions.adoc
+++ b/docs/modules/trino/partials/supported-versions.adoc
@@ -2,6 +2,7 @@
 // This is a separate file, since it is used by both the direct Trino documentation, and the overarching
 // Stackable Platform documentation.
 
-- 451 (deprecated)
-- 476 (deprecated)
+// These versions must be sorted in descending order (highest to lowest).
 - 477 (LTS)
+- 476 (deprecated)
+- 451 (deprecated)
