--- a/docs/modules/trino/pages/reference/security.adoc
+++ b/docs/modules/trino/pages/reference/security.adoc
@@ -11,7 +11,7 @@
 [source,yaml]
 ----
 apiVersion: trino.stackable.tech/v1alpha1
-kind: TrinoCluster # <1>
+kind: TrinoCluster
 spec:
   clusterConfig:
     authorization:
@@ -19,11 +19,9 @@ spec:
         enableColumnMasking: true # default
 ----
 
-<1> Redundant fields for column masking reference configuration are omitted
-
 ===== Result
 
-In `access-control.properties` the following value is set, when `enableColumnMasking` is set to `true`:
+In the `access-control.properties` file, the following value is set when `enableColumnMasking` is set to `true`:
 
 [source]
 ----
@@ -36,4 +34,4 @@ opa.policy.batch-column-masking-uri=<opa-url>/v1/data/<package>/batchColumnMasks
 ===== Considerations
 
 The default setting for `enableColumnMasking` assumes a `batchColumnMasks` rule is defined in the Rego rules for the TrinoCluster.
-If there is no such rule defined, Trino queries, using that column masking endpoint, will fail.
+If no such rule is defined, Trino queries that utilize the column masking endpoint will fail.
