feat: Batch OPA column mask calls (#827)
* add batchColumnMasks OPA endpoint, add schema definition, adjust operator to use new batched endpoint

* add/adjust tests, add crd field to disable column masking

* incorporate decision feedback

* adjust tests

* make `opa` within `authorization` a required enum variant

* pre-commit fixes

* refactor code, add documenation

* add changelog entries

* cleanup test and unnecessary function

* fix docs

* remove version 451 test handling

* Update rust/operator-binary/src/crd/mod.rs

Co-authored-by: Siegfried Weber <mail@siegfriedweber.net>

* Update tests/templates/kuttl/opa-authorization/trino_rules/trino/verification.rego

Co-authored-by: Siegfried Weber <mail@siegfriedweber.net>

* Update tests/templates/kuttl/opa-authorization/trino_rules/trino/verification.rego

Co-authored-by: Siegfried Weber <mail@siegfriedweber.net>

* remove unneeded line wrap

* fix docs

* update config overrides list

* fix rego test

* disable columnmasking in example

* pre-commit fixes

---------

Co-authored-by: Siegfried Weber <mail@siegfriedweber.net>

--- a/docs/modules/trino/pages/usage-guide/overrides.adoc
+++ b/docs/modules/trino/pages/usage-guide/overrides.adoc
@@ -27,8 +27,12 @@ Confiuration overrides are applied like so:
 
 Configuration overrides can be applied to:
 
+* `access-control.properties`
 * `config.properties`
 * `node.properties`
+* `security.properties`
+* `exchange-manager.properties`
+* `spooling-manager.properties`
 
 === Configuration overrides in the TrinoCatalog
 
